tests/ui/errors/unterminated_element.rs
use leptos_mview::mview;

fn main() {
    mview! {
        input type="text"
        "hi"
    };
}
